# ts_general_model

./: .gitignore  README.md  main.py  pyproject.toml
src/ts_general_model/: configs.py  data_processing.py  feature_engineering.py  modelling.py  notebook.ipynb  orbit_bt.py  sql.txt  statistical_tests.py
