[project]
name = "ts-general-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Leao",email = "pedrojubilotleao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "linearmodels (>=6.1,<7.0)"
]

[tool.poetry]
packages = [{include = "ts_general_model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
